Fix leaks with GValues holding boxed and object types

Expose read access to PyGIBoxed.free_on_dealloc.
Add GObject.Value.__del__ override and call unset() to
correctly free reference counts.

https://bugzilla.gnome.org/show_bug.cgi?id=688137